springboot-app/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-app-service

spec:
  selector:
    app: enterprise-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
