springboot-app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: enterprise-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: enterprise-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enterprise-app-service
                port:
                  number: 80
